<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<PreferenceCategory android:title="@string/config_category_view">
		<CheckBoxPreference
			android:key="@string/config_showStats_key"
			android:title="@string/config_showStats_title"
			android:summary="@string/config_showStats_summary"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:key="@string/config_showTolerance_key"
			android:title="@string/config_showTolerance_title"
			android:summary="@string/config_showTolerance_summary"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:key="@string/config_enableAntiAliasing_key"
			android:title="@string/config_enableAntiAliasing_title"
			android:summary="@string/config_enableAntiAliasing_summary"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:key="@string/config_enableOpenStreetBugs_key"
			android:title="@string/config_enableOpenStreetBugs_title"
			android:summary="@string/config_enableOpenStreetBugs_summary"
			android:defaultValue="false"
		/>
		<ListPreference
			android:key="@string/config_backgroundLayer_key"
			android:title="@string/config_backgroundLayer_title"
			android:summary="@string/config_backgroundLayer_summary"
			android:entries="@array/renderer_names"
			android:entryValues="@array/renderer_ids"
			android:defaultValue="MAPNIK"
		/>
		<!-- <EditTextPreference
			android:key="@string/config_maxStrokeWidth_key"
			android:title="@string/config_maxStrokeWidth_title"
			android:summary="@string/config_maxStrokeWidth_summary"
			android:dialogTitle="@string/config_maxStrokeWidth_title"
			android:numeric="decimal"
			android:defaultValue="10.0"
		/> -->
	</PreferenceCategory>
	
	<PreferenceCategory 
		android:title="@string/config_category_server"
		android:key="@string/config_category_server_key"
	>
		<Preference
			android:title="@string/config_apibutton_title"
			android:key="@string/config_apibutton_key"
			android:summary="@string/config_apibutton_summary"
		/>
		<de.blau.android.prefs.LoginDataPreference
			android:key="@string/config_loginbutton_key"
			android:title="@string/config_loginbutton_title"
			android:summary="@string/config_username_summary"
			android:dialogTitle="@string/config_loginbutton_title"
			android:singleLine="true"
		/>
		<Preference
			android:title="@string/config_presetbutton_title"
			android:key="@string/config_presetbutton_key"
			android:summary="@string/config_presetbutton_summary"
		/>
		<CheckBoxPreference
			android:title="@string/config_iconbutton_title"
			android:key="@string/config_iconbutton_key"
			android:summary="@string/config_iconbutton_summary"
			android:persistent="false"
		/>
			</PreferenceCategory>
	<PreferenceCategory android:title="@string/config_category_gps">
		<EditTextPreference
			android:key="@string/config_gps_interval_key"
			android:title="@string/config_gps_interval_title"
			android:summary="@string/config_gps_interval_summary"
			android:dialogTitle="@string/config_gps_interval_title"
			android:defaultValue="1000"
			android:numeric="integer"
		/>
		<EditTextPreference
			android:key="@string/config_gps_distance_key"
			android:title="@string/config_gps_distance_title"
			android:summary="@string/config_gps_distance_summary"
			android:dialogTitle="@string/config_gps_distance_title"
			android:numeric="decimal"
			android:defaultValue="5.0"
		/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/config_category_info">
		<Preference
			android:title="@string/config_licensebutton_title"
			android:summary="@string/config_licensebutton_summary"
			android:key="@string/config_licensebutton_key"
		/>		
	</PreferenceCategory>
</PreferenceScreen>