<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	
	<item
		android:title="@string/menu_gps"
		android:icon="@drawable/menu_gps"
		android:showAsAction="ifRoom"
	>	
		
		<menu>
				<item
					android:id="@+id/menu_gps_show"
					android:title="@string/menu_gps_show"
					android:checkable="true"
					android:alphabeticShortcut="g"
				/>
				<item
					android:id="@+id/menu_gps_follow"
					android:title="@string/menu_gps_follow"
					android:checkable="true"
					android:alphabeticShortcut="f"
				/>
				<item
					android:id="@+id/menu_gps_start"
					android:title="@string/menu_gps_start"
				/>
				<item
					android:id="@+id/menu_gps_pause"
					android:title="@string/menu_gps_pause"
				/>
				<item
					android:id="@+id/menu_gps_clear"
					android:title="@string/menu_gps_clear"
				/>
				<item
					android:id="@+id/menu_gps_upload"
					android:title="@string/menu_gps_upload"
					android:enabled="false"
				/>
		</menu>
	</item>
	
	<item
		android:title="@string/menu_transfer"
		android:icon="@drawable/menu_transfer"
		android:showAsAction="ifRoom"
	>	
		<menu>
				<item
					android:id="@+id/menu_transfer_download_current"
					android:title="@string/menu_transfer_download_current"
				/>
				<item
					android:id="@+id/menu_transfer_download_other"
					android:title="@string/menu_transfer_download_other"
				/>
				<item
					android:id="@+id/menu_transfer_upload"
					android:title="@string/menu_transfer_upload"
				/>
		</menu>
	</item>

	<item
		android:id="@+id/menu_confing"
		android:title="@string/menu_config"
		android:alphabeticShortcut="c"
		android:icon="@drawable/menu_config"
		android:showAsAction="ifRoom"
	/>
</menu>