<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/vertical_layout"
		android:padding="5dp"
	>
		<de.blau.android.views.WrappingLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
		>
			<Button android:id="@+id/sourcesurveyButton"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:text="@string/sourcesurvey" />

			<Button
			    android:id="@+id/applyPresetButton"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:text="@string/apply_preset_button_text"
			/>
			<Button
			    android:id="@+id/repeatLastButton"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:text="@string/repeat_last_button_text"
			/>
			<Button android:id="@+id/okButton"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				android:text="@string/okay" />
		</de.blau.android.views.WrappingLayout>
	</LinearLayout>
</ScrollView>